--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@types/http-errors": "^2.0.3",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9",
+    "@types/socket.io": "^3.0.2",
     "bun-types": "latest",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -21,6 +22,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.2"
   }
 }
