--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "clipsync-client",
-  "module": "index.ts",
+  "name": "client",
+  "version": "1.0.0",
+  "description": "To install dependencies:",
+  "main": "index.js",
   "type": "module",
-  "devDependencies": {
-    "@types/socket.io": "^3.0.2",
-    "bun-types": "latest"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "clipboardy": "^4.0.0",
-    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
 }
