--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clipboard-event": "^1.6.0",
     "clipboardy": "^4.0.0",
     "socket.io-client": "^4.7.2"
   }
