--- a/mobile_client/pubspec.yaml
+++ b/mobile_client/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_foreground_task: ^6.1.2
+  flutter_background_service: ^5.0.2
+  flutter_local_notifications: ^16.1.0
   clipboard_watcher: ^0.2.0
   socket_io_client: ^2.0.3+1
 
@@ -62,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
