--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "args-parser": "^1.3.0",
     "clipboard-event": "^1.6.0",
-    "clipboardy": "^4.0.0",
+    "dotenv": "^16.3.1",
     "socket.io-client": "^4.7.2"
   }
 }
