--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "To install dependencies:",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +12,8 @@
   "dependencies": {
     "args-parser": "^1.3.0",
     "clipboard-event": "^1.6.0",
+    "clipboardy": "^4.0.0",
+    "daemon": "^1.1.0",
     "dotenv": "^16.3.1",
     "socket.io-client": "^4.7.2"
   }
