--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "clipSync",
   "version": "1.0.0",
   "description": "To install dependencies:",
   "main": "index.js",
@@ -12,10 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "args-parser": "^1.3.0",
-    "clipboard-event": "^1.6.0",
     "clipboardy": "^4.0.0",
+    "configstore": "^6.0.0",
     "daemon": "^1.1.0",
-    "dotenv": "^16.3.1",
     "socket.io-client": "^4.7.2"
   }
 }
